--- a/content/_index.html
+++ b/content/_index.html
@@ -11,7 +11,7 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
     {{< image src="home.jpg" alt="Foothills overhead doors" type="global">}}
     <div class="heading">
       <h1>We Install Quality Overhead Doors</h1>
-      <p>YOUR satisfaction is our goal-every day!</p>
+      <p>YOUR satisfaction is our goal: every-day!</p>
       <a href="contact" class="btn-main">Get a Quote</a>
     </div>
   </div>
@@ -30,7 +30,7 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
   <ol>
     <li>Click the "Get a Quote" button and fill out the details.</li>
     <li>We'll contact you to schedule a free estimate.</li>
-    <li>Any non-stock doors require a 65% down payment to place the order.</li>
+    <li>We will help you choose a door style and color to compliment your home.</li>
     <li>We'll schedule a date to install your new garage doors.</li>
     <li>We'll install your garage door with as much care as if it was our own.</li>
   </ol>
