--- a/content/commercial-doors/index.html
+++ b/content/commercial-doors/index.html
@@ -46,7 +46,7 @@ description: "Your source for the highest quality commercial overhead doors and 
   <h2>Step 2: Choose Your Insulation</h2>
   <div class="choices">
      <div class="cheap">
-       {{< image src="no-ins.jpg" alt="no door insulation" widths="140" type="global">}}
+       {{< image src="com-no-ins.jpg" alt="no door insulation" widths="140" type="global">}}
        <p class="brown-text">No Insulation</p>
      </div>
      <div class="economy">
@@ -62,11 +62,11 @@ description: "Your source for the highest quality commercial overhead doors and 
        <p class="brown-text">Extra Heavy Duty: Steel Sandwich Panels</p>
      </div>
      <div class="premium">
-       {{< image src="no-ins-full.jpg" alt="full view door no insulation" widths="140" type="global">}}
+       {{< image src="ins-full.jpg" alt="full view door no insulation" widths="140" type="global">}}
        <p class="brown-text">Full View: No Insulation</p>
      </div>
      <div class="expensive">
-       {{< image src="ins-full.jpg" alt="full view door with insulation" widths="140" type="global">}}
+       {{< image src="no-ins-full.jpg" alt="full view door with insulation" widths="140" type="global">}}
        <p class="brown-text">Full View: Stile and Rail Insulated</p>
      </div>
   </div>
@@ -136,18 +136,14 @@ description: "Your source for the highest quality commercial overhead doors and 
   <div class="">
     <h3>Type of Glass</h3>
     <div class="options-choices">
-       <div class="">
-         <div class="clear">
-
-         </div>
-         <p class="brown-text heading-cheap">Plain / Clear</p>
-       </div>
-       <div class="">
-         <div class="tinted">
-
-         </div>
-         <p class="brown-text heading-econ">Tinted</p>
-       </div>
+      <div class="">
+        {{< image src="plain_glass.jpg" alt="full view plain glass" widths="169" type="global">}}
+        <p class="brown-text heading-cheap">Plain/Clear</p>
+      </div>
+      <div class="">
+        {{< image src="Tinted_glass.jpg" alt="full view tinted glass" widths="169" type="global">}}
+        <p class="brown-text heading-econ">Tinted</p>
+      </div>
     </div>
   </div>
   <div class="">
