--- a/content/contact/index.html
+++ b/content/contact/index.html
@@ -20,7 +20,7 @@ description: "Get in touch with us to find out more about our high-quality doors
 			<a href="tel:8702759899" class="phone-number brown-text">870-275-9899</a>
       <p class="small-header-text">Call or Text</p>
       <br>
-			<a class="big-p brown-text" href="https://goo.gl/maps/myBRKTUYtvvz2gNSA">135 Leggett St,<br> Jonesboro AR 72401</a>
+			<a class="big-p brown-text" href="https://goo.gl/maps/myBRKTUYtvvz2gNSA">4803 E Parker Rd,<br> Jonesboro AR 72401</a>
       <a class="big-p brown-text" href="mailto:sales@foothillsoverheaddoors.com">sales@FoothillsOverheadDoors.com</a>
 		</div>
   </div>
