--- a/content/residential-operators/index.html
+++ b/content/residential-operators/index.html
@@ -36,7 +36,7 @@ description: "Foothills Overhead Doors is your best source for quality Liftmaste
        <p class="brown-text">Belt Drive w/ Camera and Battery Backup</p>
        <p class="tan-text center">87504-267</p>
      </div>
-     <div class="cheap">
+     <div class="economy">
        {{< image src="04-Res-Jack-Shaft.jpg" alt="residential wall mount opener" widths="140" type="global">}}
        <p class="brown-text">Light-Duty Jackshaft (Wall Mount)</p>
        <p class="tan-text center">LJ8900W</p>
