--- a/content/contact/index.html
+++ b/content/contact/index.html
@@ -28,6 +28,7 @@ description: "Get in touch with us to find out more about our high-quality doors
 
 <section>
   <h2>I Want a Quote</h2>
+  <!--
   <form name='Contact' class="" action="/thanks" method="post" data-netlify="true" data-secure>
     <div class="form-columns">
     <div class="form-input">
@@ -66,6 +67,10 @@ description: "Get in touch with us to find out more about our high-quality doors
     </div>
     <input type="submit" name="submit" class="btn-main" value="Submit Info">
   </form>
+  -->
+  <div class="form-parent"><iframe
+src='https://st.sendajob.com/MY/servicerequest/09142e1f64cbbd03f42ac00ad80e0bcf57e4ffbf_f.html' 
+width='100%' height='618.578125' scrolling='no' style='border:none;'></iframe></div>
   <br>
   <p class="big-p bold tan-text center">Thank you for this opportunity to serve you! Your Satisfaction is our Goal.</p>
   <br>
