--- a/content/_index.html
+++ b/content/_index.html
@@ -62,5 +62,6 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
     <a href="https://www.chiohd.com/" target="_blank">{{<image src="chi.png" alt="chi overhead doors" widths="220" type="global">}}</a>
     <a href="http://www.liftmaster.com/" target="_blank">{{<image src="liftmaster.png" alt="liftmaster openers" widths="220" type="global" class="liftmaster">}}</a>
     <a href="http://www.janusintl.com/" target="_blank">{{<image src="janus.png" alt="janus international" widths="220" type="global">}}</a>
+    <a href="https://www.haasdoor.com/" target="_blank">{{<image src="haus.png" alt="Haus Doors" widths="220" type="global">}}</a>
   </div>
 </section>
