--- a/content/_index.html
+++ b/content/_index.html
@@ -65,3 +65,11 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
     <a href="https://www.haasdoor.com/" target="_blank">{{<image src="haus.png" alt="Haus Doors" widths="220" type="global">}}</a>
   </div>
 </section>
+
+<!-- Google tag (gtag.js) event -->
+<script>
+  gtag('event', 'ads_conversion_Contact_1', {
+    // <event_parameters>
+  });
+</script>
+
