--- a/content/contact/index.html
+++ b/content/contact/index.html
@@ -21,10 +21,11 @@ description: "Get in touch with us to find out more about our high-quality doors
       <p class="small-header-text">Call or Text</p>
       <br>
 			<div class="buttons">
-        <a class="big-p brown-text" href="https://goo.gl/maps/myBRKTUYtvvz2gNSA"> <span class="bold">Jonesboro Warehouse Location:</span> <br>8209 North Highway 63,<br> Bono AR 72416</a> <br>
-        <a class="big-p brown-text" href="https://maps.app.goo.gl/Wjstj3UKUks75qNo8"><span class="bold">Strawberry Warehouse Location:</span> <br>900 W River Dr,<br> Strawberry AR 72469</a> <br>
         <a class="big-p brown-text>" ><span class="bold">Mailing Address:</span> <br>PO Box 17142 <br>Jonesboro AR 72403</a><br>
-        <a class="big-p brown-text>" ><span class="bold">Office:</span> <br>450 Fairview Rd <br>Searcy AR 72143</a>
+        <a class="big-p brown-text" href="https://goo.gl/maps/myBRKTUYtvvz2gNSA"> <span class="bold">Jonesboro Warehouse:</span> <br>8209 N Highway 63,<br> Bono AR 72416</a> <br>
+        <a class="big-p brown-text" href="https://maps.app.goo.gl/Wjstj3UKUks75qNo8"><span class="bold">Strawberry Warehouse:</span> <br>900 W River Dr,<br> Strawberry AR 72469</a> <br>
+        
+        <a class="big-p brown-text>" ><span class="bold">Office:</span> <br>450 Fairview Rd <br>Searcy AR 72143 <br>Ph: 501-501-7587</a>
 
       </div> <br>
       <a class="big-p brown-text" href="mailto:sales@foothillsoverheaddoors.com">sales@FoothillsOverheadDoors.com</a>
