--- a/content/residential-doors/index.html
+++ b/content/residential-doors/index.html
@@ -39,17 +39,18 @@ description: Foothills is your premier supplier of overhead doors for your garag
       <p class="brown-text heading-econ">Long Carriage House</p>
     </div>
     <div class="">
+      <img src="/images/Panel-Style-Shaker.svg" alt="shaker panel">
+      <p class="brown-text heading-econ">Shaker</p>
+    </div>
+    <div class="">
       <img src="/images/Panel-Style-ShortRecessed.svg" alt="short recessed panel">
       <p class="brown-text heading-econ">Short Recessed</p>
     </div>
     <div class="">
       <img src="/images/Panel-Style-LongRecessed.svg" alt="long recessed panel">
-      <p class="brown-text heading-econ">Long Recessed</p>
+      <p class="brown-text heading-prem">Long Recessed</p>
     </div>
-    <div class="">
-      <img src="/images/Panel-Style-Shaker.svg" alt="shaker panel">
-      <p class="brown-text heading-econ">Shaker</p>
-    </div>
+    
     <div class="">
       <img src="/images/Panel-Style-PlankVGroove.svg" alt="plank v-groove panel">
       <p class="brown-text heading-prem">Plank (V-Groove)</p>
@@ -237,6 +238,12 @@ description: Foothills is your premier supplier of overhead doors for your garag
 
          </div>
          <p class="brown-text heading-econ">Tinted</p>
+       </div>
+       <div class="">
+         <div class="frosted">
+
+         </div>
+         <p class="brown-text heading-prem">Frosted</p>
        </div>
     </div>
   </div>
